Added text-to-speech, dictionary additions, and bugfixes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:name=".MainActivity">
         </activity>
         <activity
-            android:name=".Credits">
+            android:name=".CreditsActivity">
         </activity>
     </application>
 
